--- a/package.json
+++ b/package.json
@@ -1,9 +1,32 @@
 {
-  "main": "mimeparser",
-  "volo": {
-    "baseDir": "deps",
-    "dependencies": {
-      "mimefuncs": "github:Kreata/mimefuncs/v0.1.3"
-    }
-  }
+    "name": "mimeparser",
+    "version": "0.1.0",
+    "homepage": "https://github.com/whiteout-io/mimeparser",
+    "description": "Parse a mime tree, no magic included.",
+    "author": "Andris Reinman <andris@kreata.ee>",
+    "keywords": ["mime"],
+    "license": "MIT",
+    "scripts": {
+        "test": "grunt"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/whiteout-io/mimeparser.git"
+    },
+    "main": "src/mimeparser",
+    "dependencies": {},
+    "devDependencies": {
+        "chai": "~1.8.1",
+        "grunt": "~0.4.1",
+        "grunt-mocha-phantomjs": "~0.4.0",
+        "grunt-contrib-connect": "~0.6.0",
+        "grunt-contrib-jshint": "~0.8.0",
+        "mocha": "~1.16.2",
+        "phantomjs": "~1.9.7-1",
+        "requirejs": "~2.1.10",
+        "stringencoding": "https://github.com/whiteout-io/stringencoding/tarball/0.1.0",
+        "arraybuffer-slice": "0.0.2",
+        "mimefuncs": "https://github.com/whiteout-io/mimefuncs/tarball/0.1.5"
+    },
+    "volo": {}
 }
