--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
         "url": "git://github.com/whiteout-io/mimeparser.git"
     },
     "main": "src/mimeparser",
-    "dependencies": {},
+    "dependencies": {
+        "mimefuncs": "https://github.com/whiteout-io/mimefuncs/tarball/v0.1.5"
+    },
     "devDependencies": {
         "chai": "~1.8.1",
         "grunt": "~0.4.1",
@@ -25,8 +27,7 @@
         "phantomjs": "~1.9.7-1",
         "requirejs": "~2.1.10",
         "stringencoding": "https://github.com/whiteout-io/stringencoding/tarball/v0.1.0",
-        "arraybuffer-slice": "0.0.2",
-        "mimefuncs": "https://github.com/whiteout-io/mimefuncs/tarball/v0.1.5"
+        "arraybuffer-slice": "0.0.2"
     },
     "volo": {}
 }
