--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mimeparser",
-  "version": "0.3.8",
-  "homepage": "https://github.com/whiteout-io/mimeparser",
+  "name": "emailjs-mime-parser",
+  "version": "1.0.0",
+  "homepage": "https://github.com/emailjs/emailjs-mime-parser",
   "description": "Parse a mime tree, no magic included.",
   "author": "Andris Reinman <andris@kreata.ee>",
   "keywords": [
@@ -13,24 +13,24 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/whiteout-io/mimeparser.git"
+    "url": "git://github.com/emailjs/emailjs-mime-parser.git"
   },
-  "main": "src/mimeparser",
+  "main": "src/emailjs-mime-parser",
   "dependencies": {
-    "mimefuncs": "~0.3.5",
-    "wo-addressparser": "~0.1.3"
+    "emailjs-addressparser": "^1.0.1",
+    "emailjs-mime-codec": "^1.0.1"
   },
   "devDependencies": {
-    "chai": "~1.8.1",
-    "grunt": "~0.4.1",
-    "grunt-mocha-phantomjs": "~0.4.0",
-    "grunt-contrib-connect": "~0.6.0",
-    "grunt-contrib-jshint": "~0.8.0",
-    "mocha": "~1.16.2",
-    "requirejs": "~2.1.10",
-    "wo-stringencoding": "~0.1.1",
-    "grunt-mocha-test": "~0.10.0",
-    "sinon": "1.9.0",
-    "amdefine": "~0.1.0"
+    "amdefine": "^1.0.0",
+    "chai": "^3.4.1",
+    "emailjs-stringencoding": "^1.0.1",
+    "grunt": "^0.4.5",
+    "grunt-contrib-connect": "^0.11.2",
+    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-mocha-phantomjs": "^2.0.1",
+    "grunt-mocha-test": "^0.12.7",
+    "mocha": "^2.3.4",
+    "requirejs": "^2.1.22",
+    "sinon": "^1.17.2"
   }
 }
