--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "emailjs-mime-parser",
-  "version": "1.0.1-prerelease",
+  "version": "2.0.0",
   "homepage": "https://github.com/emailjs/emailjs-mime-parser",
   "description": "Parse a mime tree, no magic included.",
   "author": "Andris Reinman <andris@kreata.ee>",
@@ -9,28 +9,46 @@
   ],
   "license": "MIT",
   "scripts": {
-    "test": "grunt"
+    "build": "./scripts/build.sh",
+    "release": "./scripts/release.sh",
+    "lint": "$(npm bin)/standard",
+    "test": "npm run lint && npm run unit",
+    "unit": "$(npm bin)/mocha './src/*-unit.js' --reporter spec --require babel-register testutils.js",
+    "test-watch": "$(npm bin)/mocha './src/*-unit.js' --reporter spec --require babel-register testutils.js --watch"
   },
   "repository": {
     "type": "git",
     "url": "git://github.com/emailjs/emailjs-mime-parser.git"
   },
-  "main": "src/emailjs-mime-parser",
+  "main": "dist/mimeparser",
   "dependencies": {
-    "emailjs-addressparser": "^1.0.1",
-    "emailjs-mime-codec": "^1.0.1"
+    "emailjs-addressparser": "^2.0.1",
+    "emailjs-base64": "^1.1.2",
+    "emailjs-mime-codec": "^2.0.1",
+    "ramda": "^0.25.0"
   },
   "devDependencies": {
-    "amdefine": "^1.0.0",
-    "chai": "^3.4.1",
-    "emailjs-stringencoding": "^1.0.1",
-    "grunt": "^0.4.5",
-    "grunt-contrib-connect": "^0.11.2",
-    "grunt-contrib-jshint": "^0.11.3",
-    "grunt-mocha-phantomjs": "^2.0.1",
-    "grunt-mocha-test": "^0.12.7",
-    "mocha": "^2.3.4",
-    "requirejs": "^2.1.22",
-    "sinon": "^1.17.2"
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "chai": "^4.1.2",
+    "mocha": "^4.0.1",
+    "nodemon": "^1.12.1",
+    "pre-commit": "^1.2.2",
+    "standard": "^10.0.3",
+    "text-encoding": "^0.6.4"
+  },
+  "standard": {
+    "globals": [
+      "describe",
+      "it",
+      "before",
+      "beforeAll",
+      "afterAll",
+      "after",
+      "expect"
+    ],
+    "ignore": [
+      "dist"
+    ]
   }
 }
