--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
   "dependencies": {
     "emailjs-addressparser": "^2.0.1",
     "emailjs-base64": "^1.1.2",
-    "emailjs-mime-codec": "^2.0.1",
-    "ramda": "^0.25.0"
+    "emailjs-mime-codec": "^2.0.1"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
