--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "emailjs-addressparser": "^2.0.1",
     "emailjs-base64": "^1.1.2",
-    "emailjs-mime-codec": "^2.0.1"
+    "emailjs-mime-codec": "^2.0.1",
+    "moment": "^2.19.1"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
