--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "main": "dist/mimeparser",
   "dependencies": {
     "emailjs-addressparser": "^2.0.1",
+    "emailjs-base64": "^1.1.2",
     "emailjs-mime-codec": "^2.0.7",
     "ramda": "^0.25.0"
   },
