--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "license": "MIT",
   "scripts": {
     "build": "./scripts/build.sh",
-    "release": "./scripts/release.sh",
     "lint": "$(npm bin)/standard",
+    "preversion": "npm run build",
     "test": "npm run lint && npm run unit",
     "unit": "$(npm bin)/mocha './src/*-unit.js' --reporter spec --require babel-register testutils.js",
     "test-watch": "$(npm bin)/mocha './src/*-unit.js' --reporter spec --require babel-register testutils.js --watch"
@@ -22,7 +22,7 @@
   },
   "main": "dist/mimeparser",
   "dependencies": {
-    "emailjs-addressparser": "^2.0.1",
+    "emailjs-addressparser": "^2.0.2",
     "emailjs-mime-codec": "^2.0.8",
     "ramda": "^0.26.1"
   },
@@ -31,10 +31,10 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
     "chai": "^4.2.0",
-    "mocha": "^6.0.2",
-    "nodemon": "^1.18.10",
+    "mocha": "^6.1.4",
+    "nodemon": "^1.19.1",
     "pre-commit": "^1.2.2",
-    "sinon": "^7.3.0",
+    "sinon": "^7.3.2",
     "standard": "^12.0.1",
     "text-encoding": "^0.7.0"
   },
